[tool.poetry]
name = "pdfsignerservice"
version = "0.1.0"
description = "This microservice is designed to sign and verify PDF files."
authors = ["adrixop95 <adrixop95@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.1"
fastapi = "^0.61.1"
endesive = "^1.5.12"
cryptography = "^3.1.1"
pathlib = "^1.0.1"
gunicorn = "^20.0.4"
python-multipart = "^0.0.5"
httptools = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
